[gd_scene load_steps=3 format=3 uid="uid://fih1la8ol5eg"]

[ext_resource type="Script" path="res://scene/symbol_scene/editing/symbol_editor_controller.gd" id="1_sayv6"]
[ext_resource type="PackedScene" uid="uid://cbkdst3f4uqnj" path="res://scene/symbol_scene/editing/symbol_editor_handle.tscn" id="2_n11fk"]

[node name="SymbolEditorController" type="Node2D"]
script = ExtResource("1_sayv6")

[node name="Center" type="Node2D" parent="."]
position = Vector2(223, 200)
scale = Vector2(50, 50)

[node name="TL_Anchor" type="Node2D" parent="Center"]
position = Vector2(-0.5, -0.5)

[node name="TR_Anchor" type="Node2D" parent="Center"]
position = Vector2(0.5, -0.5)

[node name="BL_Anchor" type="Node2D" parent="Center"]
position = Vector2(-0.5, 0.5)

[node name="BR_Anchor" type="Node2D" parent="Center"]
position = Vector2(0.5, 0.5)

[node name="Rot_Anchor" type="Node2D" parent="Center"]
position = Vector2(0, -1)

[node name="Translate_Handle" parent="." instance=ExtResource("2_n11fk")]
type = 2
scale_type = 4

[node name="TL_Handle" parent="." instance=ExtResource("2_n11fk")]

[node name="TR_Handle" parent="." instance=ExtResource("2_n11fk")]
scale_type = 1

[node name="BL_Handle" parent="." instance=ExtResource("2_n11fk")]
scale_type = 2

[node name="BR_Handle" parent="." instance=ExtResource("2_n11fk")]
scale_type = 3

[node name="Rot_Handle" parent="." instance=ExtResource("2_n11fk")]
type = 1
scale_type = 4
